--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Customer Servis</a></li>
-                  <li><a class="dropdown-item" href="#">Rahmad MY</a></li>
-                  <li><a class="dropdown-item" href="#">Something else</a></li>
+                  <li><a class="dropdown-item" href="#">Saran dan Masukan</a></li>
+                  <li><a class="dropdown-item" href="#">Chatbot Interaktif</a></li>
                 </ul>
               </li>
             </ul>
